feat: Week 1 finalisation — complete endpoints, code review, AI review improvements, walkthrough doc